// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayPanel renders OverlayPanel with confirmation modal 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        aria-hidden="true"
        class="backdrop zoomOut"
        data-floating-ui-inert=""
      />
      <div
        aria-label="Test OverlayPanel"
        class="wrapper hideOutline"
        id=":ri:"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            aria-hidden="true"
            class="box flexGrow justifyEnd marginBottom8 xsDisplayFlex"
            data-floating-ui-inert=""
          >
            <div
              class="absolute box flexNone paddingX6 paddingY7"
              style="z-index: 1;"
            >
              <button
                aria-controls=":ri:"
                aria-label="Dismiss"
                class="parentButton"
                type="button"
              >
                <div
                  class="button tapTransition enabled"
                >
                  <div
                    class="pog transparent"
                    style="height: 40px; width: 40px;"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label=""
                      class="default icon iconBlock"
                      height="18"
                      role="img"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="box flexGrow paddingX0 paddingY0 relative xsDirectionColumn xsDisplayFlex"
            data-floating-ui-inert=""
            style="height: 100%; width: 100%;"
          >
            <div
              class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
              style="height: 100%;"
            >
              <section />
            </div>
          </div>
          <div>
            <span
              aria-hidden="true"
              data-floating-ui-focus-guard=""
              data-floating-ui-inert=""
              data-type="inside"
              role="button"
              style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
              tabindex="0"
            />
            <div
              class="absolute block borderBox shadow rounding4"
              style="position: absolute; left: 0px; top: 0px; visibility: visible; outline: none; transform: translate(0px, 0px);"
              tabindex="-1"
            >
              <div
                aria-label="Popover"
                class="relative maxDimensions minDimensions border primary rounding4"
                role="dialog"
                style="max-width: 284px; overflow: auto;"
              >
                <div
                  name="trap-focus"
                >
                  <div
                    class="box paddingX3 paddingY3"
                    style="width: 100%;"
                  >
                    <div
                      class="Flex rowGap4 columnGap4 xsDirectionColumn"
                    >
                      <div
                        class="FlexItem"
                      >
                        <div
                          class="box"
                          role="alert"
                        >
                          <div
                            class="Flex rowGap2 columnGap2 xsDirectionColumn xsItemsCenter"
                            style="width: 100%;"
                          >
                            <div
                              class="FlexItem"
                            >
                              <div
                                class="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
                              >
                                Are you sure you want to dismiss?
                              </div>
                            </div>
                            <div
                              class="FlexItem"
                            >
                              <div
                                class="default alignStart breakWord Text fontSize300 fontWeightNormal"
                              >
                                You will lose all of your changes. This cannot be undone
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="FlexItem"
                      >
                        <div
                          class="Flex rowGap2 columnGap2 justifyCenter xsDirectionRow"
                        >
                          <div
                            class="FlexItem"
                          >
                            <button
                              aria-label="No, go back to the overlay panel"
                              class="button inline accessibilityOutline parentButton"
                              tabindex="0"
                              type="button"
                            >
                              <div
                                class="button inline accessibilityOutline tapTransition md gray enabled childrenDiv"
                              >
                                <div
                                  class="default alignCenter Text fontSize300 fontWeightSemiBold"
                                >
                                  No, go back
                                </div>
                              </div>
                            </button>
                          </div>
                          <div
                            class="FlexItem"
                          >
                            <button
                              aria-label="Yes, dismiss the overlay panel"
                              class="button inline accessibilityOutline parentButton"
                              tabindex="0"
                              type="button"
                            >
                              <div
                                class="button inline accessibilityOutline tapTransition md red enabled childrenDiv"
                              >
                                <div
                                  class="inverse alignCenter Text fontSize300 fontWeightSemiBold"
                                >
                                  Yes, dismiss
                                </div>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <span
              aria-hidden="true"
              data-floating-ui-focus-guard=""
              data-floating-ui-inert=""
              data-type="inside"
              role="button"
              style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`OverlayPanel should render all props with nodes 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop zoomOut"
      />
      <div
        aria-label="OverlayPanel"
        class="wrapper hideOutline"
        id=":r0:"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box fit relative"
          >
            <div
              class="Flex rowGap0 columnGap0 flexGrow justifyBetween xsDirectionRow xsItemsCenter"
            >
              <div
                class="box flexGrow paddingX6 paddingY6 xsDisplayFlex"
              >
                <h1
                  class="Heading fontSize500 default alignStart breakWord"
                >
                  OverlayPanel title
                </h1>
              </div>
              <div
                class="box flexNone paddingX6 paddingY7"
              >
                <button
                  aria-controls=":r0:"
                  aria-label="Dismiss"
                  class="parentButton"
                  type="button"
                >
                  <div
                    class="button tapTransition enabled"
                  >
                    <div
                      class="pog transparent"
                      style="height: 40px; width: 40px;"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label=""
                        class="default icon iconBlock"
                        height="18"
                        role="img"
                        viewBox="0 0 24 24"
                        width="18"
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <nav />
          </div>
          <div
            class="box flexGrow paddingX0 paddingY0 relative xsDirectionColumn xsDisplayFlex"
            style="height: 100%; width: 100%;"
          >
            <div
              class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
              style="height: 100%;"
            >
              <section />
            </div>
            <div
              class="box fit relative"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <footer />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`OverlayPanel should render all props with render props 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop zoomOut"
      />
      <div
        aria-label="OverlayPanel"
        class="wrapper hideOutline"
        id=":r1:"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box fit relative"
          >
            <div
              class="Flex rowGap0 columnGap0 flexGrow justifyBetween xsDirectionRow xsItemsCenter"
            >
              <div
                class="box flexGrow paddingX6 paddingY6 xsDisplayFlex"
              >
                <h1
                  class="Heading fontSize500 default alignStart breakWord"
                >
                  OverlayPanel title
                </h1>
              </div>
              <div
                class="box flexNone paddingX6 paddingY7"
              >
                <button
                  aria-controls=":r1:"
                  aria-label="Dismiss"
                  class="parentButton"
                  type="button"
                >
                  <div
                    class="button tapTransition enabled"
                  >
                    <div
                      class="pog transparent"
                      style="height: 40px; width: 40px;"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label=""
                        class="default icon iconBlock"
                        height="18"
                        role="img"
                        viewBox="0 0 24 24"
                        width="18"
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <button
              type="submit"
            />
          </div>
          <div
            class="box flexGrow paddingX0 paddingY0 relative xsDirectionColumn xsDisplayFlex"
            style="height: 100%; width: 100%;"
          >
            <div
              class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
              style="height: 100%;"
            >
              <button
                type="submit"
              />
            </div>
            <div
              class="box fit relative"
            >
              <div
                class="box paddingX6 paddingY6"
              >
                <button
                  type="submit"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`OverlayPanel should render animation in 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop zoomOut"
      />
      <div
        aria-label="OverlayPanel"
        class="wrapper hideOutline"
        id=":r2:"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box flexGrow justifyEnd marginBottom8 xsDisplayFlex"
          >
            <div
              class="absolute box flexNone paddingX6 paddingY7"
              style="z-index: 1;"
            >
              <button
                aria-controls=":r2:"
                aria-label="Dismiss"
                class="parentButton"
                type="button"
              >
                <div
                  class="button tapTransition enabled"
                >
                  <div
                    class="pog transparent focused"
                    style="height: 40px; width: 40px;"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label=""
                      class="default icon iconBlock"
                      height="18"
                      role="img"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="box flexGrow paddingX0 paddingY0 relative xsDirectionColumn xsDisplayFlex"
            style="height: 100%; width: 100%;"
          >
            <div
              class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
              style="height: 100%;"
            >
              <section />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`OverlayPanel should render animation out 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop zoomOut"
      />
      <div
        aria-label="OverlayPanel"
        class="wrapper hideOutline"
        id=":r3:"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box flexGrow justifyEnd marginBottom8 xsDisplayFlex"
          >
            <div
              class="absolute box flexNone paddingX6 paddingY7"
              style="z-index: 1;"
            >
              <button
                aria-controls=":r3:"
                aria-label="Dismiss"
                class="parentButton"
                type="button"
              >
                <div
                  class="button tapTransition enabled"
                >
                  <div
                    class="pog transparent focused"
                    style="height: 40px; width: 40px;"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label=""
                      class="default icon iconBlock"
                      height="18"
                      role="img"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="box flexGrow paddingX0 paddingY0 relative xsDirectionColumn xsDisplayFlex"
            style="height: 100%; width: 100%;"
          >
            <div
              class="box flexGrow overflowAuto paddingX6 paddingY6 relative"
              style="height: 100%;"
            >
              <section />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;
